--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
     <h1>Universidad de Colima</h1>
     <h2>Facultad de Telemática</h2>
     <h3>Ingeniería de software</h3>
-    <p>Formamos recursos humanos de Licenciatura y Posgrado eficientes y competitivos, socialmente comprometidos, capaces de innovar y adaptarse en el área de las Tecnologías de la Información y Comunicación (TIC) en los entornos nacional e internacional. </p>
+    <p>
+        Formamos recursos humanos de Licenciatura y Posgrado eficientes y competitivos, socialmente comprometidos, capaces de innovar y adaptarse en el área de las Tecnologías de la Información y Comunicación (TIC) en los entornos nacional e internacional. 
+    </p>
+    <h1> Ordenadas </h1>
+    <ol>
+        <li>Clase</li>
+        <li>Objeto</li>
+        <li>Método</li>
+        <li>Atributo</li>
+    </ol>
+    <h1> Desordenadas </h1>
+    <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+    </ul>
 </body>
 </html>
