--- a/index.html
+++ b/index.html
@@ -26,5 +26,23 @@
         <li>CSS</li>
         <li>JavaScript</li>
     </ul>
+    <h2>Tablas</h2>
+    <table>
+        <tr>
+            <th>Cuenta</th>
+            <th>Nombre</th>
+            <th>Correo</th>
+        </tr>
+        <tr>
+            <th>20164439</th>
+            <th>Ana Landín</th>
+            <th>alandin1@ucol.mx</th>
+        </tr>
+        <tr>
+            <th>20166566</th>
+            <th>Martin Mojica</th>
+            <th>mmojica0@ucol.mx</th>
+        </tr>
+    </table>
 </body>
 </html>
